--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,12 @@ input {
   padding-right: 50px;
   padding-bottom: 8px;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+a:hover {
+  color: blue;
+}
