Added sign in pages, fixed css files to css modules

--- a/src/Login.module.css
+++ b/src/Login.module.css
@@ -5,14 +5,11 @@ h4 {
   text-align: center;
 }
 
-.input-container {
+.container {
   padding-left: 41.5vw;
 }
 
 .button {
   margin-top: 3vh;
-  text-align: center;
-}
-.sign-up {
   text-align: center;
 }
