Updated user validations for login and sign in pages

--- a/src/PSignIn.module.css
+++ b/src/PSignIn.module.css
@@ -5,12 +5,18 @@
   gap: 5px;
 }
 
-table {
+.table {
   margin-top: 10px;
+  padding-left: 41vw;
 }
 
 table,
 th,
 td {
   border: 1px solid white;
+}
+
+.button {
+  margin-top: 5vh;
+  text-align: center;
 }
