--- a/src/EDeleteAcc.module.css
+++ b/src/EDeleteAcc.module.css
@@ -4,7 +4,7 @@
     left: 487px;
     width: 192px;
     height: 47px;
-    padding: 0px 8px;
+    padding: 0 8px;
     border: 1px solid #ff3b30;
     box-sizing: border-box;
     border-radius: 8px;
@@ -18,7 +18,7 @@
 }
 
 .card {
-    top: 0px;
+    top: 0;
     left: -6px;
     width: 190px;
     height: 900px;
@@ -251,7 +251,7 @@
     left: 920px;
     width: 192px;
     height: 47px;
-    padding: 0px 8px;
+    padding: 0 8px;
     border: 1px solid #ff2d55;
     box-sizing: border-box;
     border-radius: 8px;
@@ -263,4 +263,59 @@
     line-height: 23px;
     outline: none;
     position: absolute;
+}
+
+.error {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 440px;
+    margin-top: 260px;
+}
+
+.error2 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 840px;
+    margin-top: 260px;
+}
+
+.error3 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 440px;
+    margin-top: 360px;
+}
+
+.error4 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 840px;
+    margin-top: 360px;
+}
+
+.error5 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 440px;
+    margin-top: 516px;
 }
