--- a/src/EPay.module.css
+++ b/src/EPay.module.css
@@ -192,3 +192,47 @@
     margin-top: 380px;
 }
 
+.error {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 578px;
+    margin-top: 360px;
+}
+
+.error2 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 578px;
+    margin-top: 260px;
+}
+
+.error3 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 578px;
+    margin-top: 465px;
+}
+
+.error4 {
+    color: #ff0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    line-height: 18px;
+    position: absolute;
+    margin-left: 870px;
+    margin-top: 465px;
+}
+
